--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -8,8 +8,8 @@
 		"filter.2.description": "EasyList + AdGuardin vakiosuodatin. Tarpeellinen suodatin laadukasta mainosten estoa varten."
 	},
 	{
-		"filter.3.name": "AdGuardin seurannan estosuodatin",
-		"filter.3.description": "Kattavin lista erilaisista verkkolaskureista ja analyysityökaluista. Jos et halua että toimiasi internetissä voidaan seurata, käytä tätä suodatinta."
+		"filter.3.name": "AdGuardin seurannan eston suodatin",
+		"filter.3.description": "Kattavin lista erilaisista verkkolaskureista ja analyysityökaluista. Jos et halua, että toimiasi Internetissä seurataan, käytä tätä suodatinta."
 	},
 	{
 		"filter.4.name": "AdGuardin sosiaalisen median suodatin",
@@ -36,12 +36,12 @@
 		"filter.9.description": "Suodatin, joka tehostaa mainosten estoa erityisesti portugalin- ja espanjankielisillä sivustoilla."
 	},
 	{
-		"filter.10.name": "Hakumainontaa sivustojen omaa markkinointia salliva suodatin",
+		"filter.10.name": "Hakumainontaa ja sivustojen omaa markkinointia salliva suodatin",
 		"filter.10.description": "Suodatin, joka sallii hyödyllisemmän hakumainonnan (DuckDuckGo, Google, Bing, Yahoo) ja sivustojen oman markkinoinnin. Oman markkinoinnin määritelmä: Kun mainos kohdistuu juuri tähän sivustoon tai sivustoihin/sosiaaliseen mediaan/tm. läheisesti siihen liittyvään, pidetään mainosta omana markkinointina."
 	},
 	{
 		"filter.11.name": "AdGuardin mobiilimainosten suodatin",
-		"filter.11.description": "Suodatin tunnetuille mobiilimainosverkoille. Hyödyllinen mobiililaitteissa."
+		"filter.11.description": "Suodatin tunnetuille mobiilimainosverkostoille. Hyödyllinen mobiililaitteissa."
 	},
 	{
 		"filter.12.name": "AdGuardin Safari-suodatin",
@@ -57,14 +57,14 @@
 	},
 	{
 		"filter.15.name": "AdGuardin DNS-suodatin",
-		"filter.15.description": "Suodatin koostuu useista erillisistä suodattimista (AdGuard perussuodatin, sosiaalisen median suodatin, seurannan estosuodatin, mobiilimainosten suodatin, EasyList ja EasyPrivacy) ja se on erityisesti tiivistetty DNS-tason mainosten estoon sopivammaksi."
+		"filter.15.description": "Suodatin koostuu useista erillisistä suodattimista (AdGuard vakiosuodatin, sosiaalisen median suodatin, seurannan eston suodatin, mobiilimainosten suodatin, EasyList ja EasyPrivacy) ja se on erityisesti tiivistetty DNS-tason mainosten estoon sopivammaksi."
 	},
 	{
 		"filter.16.name": "AdGuardin ranskankielen suodatin",
 		"filter.16.description": "Liste FR + AdGuardin ranskankielinen suodatin. Poistaa mainoksia erityisesti raskankielisillä sivustoilla."
 	},
 	{
-		"filter.17.name": "AdGuardin URL-seurannan estosuodatin",
+		"filter.17.name": "AdGuardin URL-seurannan eston suodatin",
 		"filter.17.description": "Suodatin, joka parantaa yksityisyyttä poistamalla seurantaparametrit URL-osoitteista."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Suodatin, joka poistaa mainoksia, seurantoja ja useita skriptejä koreankielisiltä verkkosivuilta. Perustuu Corset, Korean Adblock filter ja Youslist -listoihin. Yhdistetty ja vahvistettu AdGuardin suodatinten kanssa tehostettua suodatusta varten. Tämä suodatin on tarkoitettu käytettäväksi yhdessä AdGuardin vakiosuodattimen kanssa."
+		"filter.227.description": "Suodatin, joka poistaa mainoksia, seurantoja ja useita skriptejä koreankielisiltä verkkosivuilta. Perustuu Corset, Korean Adblock filter ja Youslist -suodatuslistoihin. Yhdistetty ja vahvistettu erityisillä AdGuard-kohtaisilla säännöillä tehostettua suodatusta varten. Tämä suodatin on tarkoitettu käytettäväksi yhdessä AdGuardin vakiosuodattimen kanssa."
 	},
 	{
 		"filter.228.name": "xinggsf",
