--- a/locales/fi/tags.json
+++ b/locales/fi/tags.json
@@ -116,8 +116,8 @@
 		"tag.24.name": "Turkinkielisten mainosten esto"
 	},
 	{
-		"tag.25.description": "Sisältää viitteitä seurannan estosuodattimeen",
-		"tag.25.name": "Seurannan estosuodattimen viite"
+		"tag.25.description": "Sisältää viitteitä seurannan eston suodattimeen",
+		"tag.25.name": "Seurannan eston suodattimen viite"
 	},
 	{
 		"tag.26.description": "Has references to the Mobile Ads filter",
