--- a/locales/he/filters.json
+++ b/locales/he/filters.json
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "מסנן אשר מסיר פרסומות, עוקבנים, ותסריטים שונים מאתרים עם תוכן קוריאני. מבוסס על Corset, מסנן חסימת פרסומות קוריאני, Youslist. משולב ומרובד עם כלליי AdGuard מסוימים עבור סינון מועצם. מסנן זה מצופה להיות בשימוש לצד מסנן הבסיס של AdGuard."
+		"filter.227.description": "מסנן אשר מסיר פרסומות ותסריטים שונים מאתרים עם תוכן קוריאני. מבוסס על Corset, מסנן חסימת פרסומות קוריאני, Youslist. משולב ומרובד עם כלליי AdGuard מסוימים עבור סינון מועצם. מסנן זה מצופה להיות בשימוש לצד מסנן הבסיס של AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
