--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -9,7 +9,7 @@
 	},
 	{
 		"filter.3.name": "Filtro Protezione Antitracciamento",
-		"filter.3.description": "L\\'elenco più esaustivo dei vari contatori e analizzatori del traffico di rete. Se non vuoi che le tue azioni su Internet vengano monitorate, utilizza questo filtro."
+		"filter.3.description": "L'elenco più esaustivo dei vari contatori e analizzatori del traffico di rete. Utilizza questo filtro, se non vuoi che le tue azioni su Internet vengano monitorate."
 	},
 	{
 		"filter.4.name": "Filtro AdGuard Social Media",
@@ -224,7 +224,7 @@
 		"filter.220.description": "Supplemento per EasyList China + EasyList e EasyPrivacy."
 	},
 	{
-		"filter.221.name": "Filtri Social polacchi",
+		"filter.221.name": "Filtri social polacchi",
 		"filter.221.description": "Elenco di filtri polacchi per widget sociali, pop-up, ecc."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "Lista KR",
-		"filter.227.description": "Filtro che rimuove annunci, traccianti e vari script da siti web con contenuto coreano. Basato su Corset, filtro blocca-annunci coreano, Youslist. Combinato e potenziato con regole specifiche di AdGuard per un filtraggio avanzato. Questo filtro dovrebbe essere utilizzato insieme al filtro AdGuard Base."
+		"filter.227.description": "Filtro che rimuove annunci e vari script da siti web con contenuto coreano. Basato su Corset, filtro blocca-annunci coreano, Youslist. Combinato e potenziato con regole specifiche di AdGuard per un filtraggio avanzato. Questo filtro dovrebbe essere utilizzato insieme al filtro AdGuard Base."
 	},
 	{
 		"filter.228.name": "xinggsf",
@@ -284,12 +284,12 @@
 		"filter.236.description": "Sottoscrizione al filtro di blocca-annunci in lingua rumena."
 	},
 	{
-		"filter.237.name": "Filtri Disturbatori polacchi",
+		"filter.237.name": "Filtri disturbatori polacchi",
 		"filter.237.description": "Elenco di filtri che nasconde e blocca pop-up, widget, newsletter, notifiche push, frecce, collegamenti interni con tag fuori tema e altri elementi irritanti. I filtri polacchi GDPR-Cookie sono già inclusi."
 	},
 	{
-		"filter.238.name": "Filtri polacchi Anti Blocca-annunci",
-		"filter.238.description": "Filtri ufficiali polacchi contro gli avvisi di disattivazione del Blocca-Annunci."
+		"filter.238.name": "Filtri polacchi antiblocca-annunci",
+		"filter.238.description": "Filtri ufficiali polacchi contro gli avvisi di disattivazione del blocca-annunci."
 	},
 	{
 		"filter.239.name": "Fanboy's Anti-thirdparty Fonts",
@@ -297,7 +297,7 @@
 	},
 	{
 		"filter.240.name": "BarbBlock",
-		"filter.240.description": "BarbBlock è una lista di blocco dei contenuti con estensioni browser autonome per Chrome e Firefox. Inserisce in lista nera i siti che hanno utilizzato la rimozione DMCA per forzare la rimozione da altri elenchi di blocco dei contenuti. Tali rimozioni sono categoricamente non valide, ma possono essere efficaci nell\\'intimidire i piccoli progetti open-source per renderli conformi."
+		"filter.240.description": "BarbBlock è un elenco di blocco contenuti con estensioni del browser standalone per Chrome e Firefox. Mette in lista nera quei siti che hanno utilizzato le rimozioni DMCA per forzare la rimozione da altri elenchi di blocco dei contenuti. Tali rimozioni sono categoricamente non valide, ma possono essere efficaci nell'intimidire i piccoli progetti open source in conformità."
 	},
 	{
 		"filter.241.name": "Lista Cookie EasyList",
