--- a/locales/it/tags.json
+++ b/locales/it/tags.json
@@ -16,8 +16,8 @@
 		"tag.29.name": "Blocca-annunci specifico per la lingua indonesiana"
 	},
 	{
-		"tag.62.description": "Ha riferimenti al filtro polacco per i Disturbatori",
-		"tag.62.name": "Riferimento al filtro polacco per i Disturbatori"
+		"tag.62.description": "Ha riferimenti al Filtro disturbatori polacchi",
+		"tag.62.name": "Riferimento al Filtro disturbatori polacchi"
 	},
 	{
 		"tag.3.description": "Progettato per bloccare gli elementi dei social media (widget, pulsanti \"Mi piace\", ecc.)",
@@ -52,7 +52,7 @@
 		"tag.4.name": "Protezione contro malware e frodi"
 	},
 	{
-		"tag.10.description": "Consigliato per l\\'utilizzo con il blocca-annunci AdGuard",
+		"tag.10.description": "Consigliato per l'utilizzo con il blocca-annunci AdGuard",
 		"tag.10.name": "Consiglio AdGuard"
 	},
 	{
