--- a/locales/pt/filters.json
+++ b/locales/pt/filters.json
@@ -1,14 +1,14 @@
 [
 	{
 		"filter.1.name": "Filtro Russo do AdGuard",
-		"filter.1.description": "Filtro que permite o bloqueio de anúncios em websites no idioma russo."
+		"filter.1.description": "Filtro que permite o bloqueio de anúncios em sítios no idioma russo."
 	},
 	{
 		"filter.2.name": "Filtro de base de AdGuard",
 		"filter.2.description": "Filtro EasyList + Base de filtros do AdGuard. Este filtro é necessário para o bloqueio de anúncios de qualidade."
 	},
 	{
-		"filter.3.name": "Filtro de protecção de monitorização do AdGuard",
+		"filter.3.name": "Filtro de proteção de monitorização do AdGuard",
 		"filter.3.description": "A lista mais abrangente de vários contadores online e ferramentas de análise web. Se não quiser que as suas acções na internet sejam monitorizadas, use este filtro."
 	},
 	{
@@ -21,23 +21,23 @@
 	},
 	{
 		"filter.6.name": "Filtro Alemão do AdGuard",
-		"filter.6.description": "EasyList Germany + Filtro Alemão do AdGuard. Lista de filtros que remove especificamente anúncios em sites de língua alemã."
+		"filter.6.description": "EasyList Germany + Filtro Alemão do AdGuard. Lista de filtros que remove especificamente anúncios em sítios de língua alemã."
 	},
 	{
 		"filter.7.name": "Filtro Japonês do AdGuard",
-		"filter.7.description": "Filtro que permite o bloqueio de anúncios em websites no idioma japonês."
+		"filter.7.description": "Filtro que permite o bloqueio de anúncios em sítios no idioma japonês."
 	},
 	{
 		"filter.8.name": "Filtro Holandês do AdGuard",
-		"filter.8.description": "EasyList Dutch + Filtro Holandês do AdGuard. Lista de filtros que remove especificamente anúncios em sites de língua holandesa."
+		"filter.8.description": "EasyList Dutch + Filtro Holandês do AdGuard. Lista de filtros que remove especificamente anúncios em sítios de língua holandesa."
 	},
 	{
 		"filter.9.name": "Filtro Espanhol/Português do AdGuard",
-		"filter.9.description": "Filtro que permite o bloqueio de anúncios em websites de língua espanhola e portuguesa."
+		"filter.9.description": "Filtro que permite o bloqueio de anúncios em sítios de língua espanhola e portuguesa."
 	},
 	{
 		"filter.10.name": "Filtro para desbloquear anúncios úteis",
-		"filter.10.description": "Filtro que desbloqueia as pesquisas (Duckduckgo, Google, Bing, Yahoo) e anúncios autopromocionais. Definição de autopromocional: quando um anúncio num site promove esse mesmo site ou outros websites / redes sociais / etc. intimamente relacionados a ele, esse anúncio é considerado autopromocional."
+		"filter.10.description": "Filtro que desbloqueia as pesquisas (Duckduckgo, Google, Bing, Yahoo) e anúncios autopromocionais. Definição de autopromocional: quando um anúncio num sítio promove esse mesmo sítio ou outros sítios/redes sociais/etc. intimamente relacionados a ele, esse anúncio é considerado autopromocional."
 	},
 	{
 		"filter.11.name": "Filtro de anúncios do AdGuard para dispositivos móveis",
@@ -49,7 +49,7 @@
 	},
 	{
 		"filter.13.name": "Filtro Turco do AdGuard",
-		"filter.13.description": "Filtro que permite o bloqueio de anúncios em websites  de língua turca."
+		"filter.13.description": "Filtro que permite o bloqueio de anúncios em sítios de língua turca."
 	},
 	{
 		"filter.14.name": "Filtro de aborrecimentos do AdGuard",
@@ -57,11 +57,11 @@
 	},
 	{
 		"filter.15.name": "Filtro DNS do AdGuard",
-		"filter.15.description": "Filtro composto por vários outros filtros (Base de filtros do AdGuard, filtro de Redes Sociais, filtro de protecção de nonitorização, filtro de anúncios para dispositivos móveis, EasyList e EasyPrivacy) e simplificado especificamente para haver maior compatibilidade com o bloqueio de anúncios ao nível do DNS."
+		"filter.15.description": "Filtro composto por vários outros filtros (Base de filtros do AdGuard, filtro de Redes Sociais, filtro de proteção de nonitorização, filtro de anúncios para dispositivos móveis, EasyList e EasyPrivacy) e simplificado especificamente para haver maior compatibilidade com o bloqueio de anúncios ao nível do DNS."
 	},
 	{
 		"filter.16.name": "Filtro Francês do AdGuard",
-		"filter.16.description": "Lista FR + filtro Francês do Adguard. Lista de filtros que remove especificamente anúncios em sites de língua francesa."
+		"filter.16.description": "Lista FR + filtro Francês do Adguard. Lista de filtros que remove especificamente anúncios em sítios de língua francesa."
 	},
 	{
 		"filter.17.name": "Filtro de monitorização de URL do AdGuard",
@@ -69,7 +69,7 @@
 	},
 	{
 		"filter.224.name": "Filtro Chinês do AdGuard",
-		"filter.224.description": "EasyList China+ Filtro China do AdGuard. Lista de filtros que remove especificamente anúncios em sites de língua chinesa."
+		"filter.224.description": "EasyList China+ Filtro China do AdGuard. Lista de filtros que remove especificamente anúncios em sítios de língua chinesa."
 	},
 	{
 		"filter.101.name": "EasyList",
@@ -133,7 +133,7 @@
 	},
 	{
 		"filter.118.name": "EasyPrivacy",
-		"filter.118.description": "Suplemento de protecção de privacidade para EasyList."
+		"filter.118.description": "Suplemento de proteção de privacidade para EasyList."
 	},
 	{
 		"filter.119.name": "Lista ABP Islandês",
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filtro que remove anúncios, monitorizadores e vários scripts de sites com conteúdo coreano. Baseado em Corset, filtro Adblock coreano, Youslist. Combinado e aumentado com regras específicas do AdGuard para filtragem aprimorada. Espera-se que esse filtro seja usado junto com o filtro base do AdGuard."
+		"filter.227.description": "Filtro que remove anúncios e vários scripts de sítios com conteúdo coreano. Baseado em Corset, filtro Adblock coreano, Youslist. Combinado e aumentado com regras específicas do AdGuard para filtragem aprimorada. Espera-se que esse filtro seja usado junto com o filtro base do AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
@@ -293,11 +293,11 @@
 	},
 	{
 		"filter.239.name": "Fanboy's Anti-thirdparty Fonts",
-		"filter.239.description": "Um filtro que bloqueia fontes de terceiros. Isso pode prejudicar a aparência e o design de alguns sites."
+		"filter.239.description": "Um filtro que bloqueia fontes de terceiros. Isso pode prejudicar a aparência e o design de alguns sítios."
 	},
 	{
 		"filter.240.name": "BarbBlock",
-		"filter.240.description": "BarbBlock é uma lista de bloqueio de conteúdo com extensões de navegador independentes para Chrome e Firefox. Ele coloca na lista negra sites que usaram remoções por DMCA para forçar a remoção de outras listas de bloqueio de conteúdo. Essas remoções são categoricamente inválidas, mas podem ser eficazes para intimidar pequenos projetos de código aberto em conformidade."
+		"filter.240.description": "BarbBlock é uma lista de bloqueio de conteúdo com extensões de navegador independentes para Chrome e Firefox. Ele coloca na lista negra sítios que usaram remoções por DMCA para forçar a remoção de outras listas de bloqueio de conteúdo. Essas remoções são categoricamente inválidas, mas podem ser eficazes para intimidar pequenos projetos de código aberto em conformidade."
 	},
 	{
 		"filter.241.name": "EasyList Cookie List",
@@ -325,10 +325,10 @@
 	},
 	{
 		"filter.247.name": "Suplemento especial anti-aborrecimento polonês",
-		"filter.247.description": "Filtros que bloqueiam e ocultam elementos RSS e resquícios de boletins informativos ocultos combinados com elementos sociais em sites poloneses."
+		"filter.247.description": "Filtros que bloqueiam e ocultam elementos RSS e resquícios de boletins informativos ocultos combinados com elementos sociais em sítios poloneses."
 	},
 	{
 		"filter.249.name": "Filtros Nórdicos de Sprout de Dandelion",
-		"filter.249.description": "Esta lista cobre sites da Noruega, Dinamarca, Islândia, territórios dinamarqueses e da população indígena Sami."
+		"filter.249.description": "Esta lista cobre sítios da Noruega, Dinamarca, Islândia, territórios dinamarqueses e da população indígena Sami."
 	}
 ]
