--- a/locales/pt/tags.json
+++ b/locales/pt/tags.json
@@ -28,7 +28,7 @@
 		"tag.9.name": "Referência EasyList"
 	},
 	{
-		"tag.6.description": "Projectado para bloquear avisos de cookies nos sites",
+		"tag.6.description": "Projectado para bloquear avisos de cookies nos sítios",
 		"tag.6.name": "Bloqueio de avisos de cookie"
 	},
 	{
@@ -37,7 +37,7 @@
 	},
 	{
 		"tag.2.description": "Projectado para proteger a sua privacidade online bloqueando monitorizadores e análises",
-		"tag.2.name": "Protecção de privacidade"
+		"tag.2.name": "Proteção de privacidade"
 	},
 	{
 		"tag.8.description": "Projectado especificamente para bloquear publicidade em páginas da Web em russo",
@@ -48,8 +48,8 @@
 		"tag.1.name": "Bloqueio de publicidade"
 	},
 	{
-		"tag.4.description": "Projectado para o proteger de sites mal-intencionados e perigosos",
-		"tag.4.name": "Protecção contra malware e fraude"
+		"tag.4.description": "Projectado para o proteger de sítios mal-intencionados e perigosos",
+		"tag.4.name": "Proteção contra malware e fraude"
 	},
 	{
 		"tag.10.description": "Recomendado para usar com bloqueador de publicidade do AdGuard",
@@ -57,7 +57,7 @@
 	},
 	{
 		"tag.5.description": "Projectado para bloquear elementos não publicitários que o distraem do conteúdo (ofertas de inscrição, avisos de promoção etc.)",
-		"tag.5.name": "Protecção anti-aborrecimento"
+		"tag.5.name": "Proteção anti-aborrecimento"
 	},
 	{
 		"tag.11.description": "Tem referências à Base de filtros do AdGuard",
@@ -116,8 +116,8 @@
 		"tag.24.name": "Bloqueio de publicidade específico no idioma turco"
 	},
 	{
-		"tag.25.description": "Tem referências ao filtro de protecção de monitorização",
-		"tag.25.name": "Referência do filtro de protecção de monitorização"
+		"tag.25.description": "Tem referências ao filtro de proteção de monitorização",
+		"tag.25.name": "Referência do filtro de proteção de monitorização"
 	},
 	{
 		"tag.26.description": "Tem referências ao filtro de publicidade para dispositivos móveis",
@@ -188,7 +188,7 @@
 		"tag.44.name": "Bloqueio de publicidade específico no idioma em grego"
 	},
 	{
-		"tag.45.description": "Pode causar problemas, dependendo do seu bloqueador de anúncios e do site específico",
+		"tag.45.description": "Pode causar problemas, dependendo do seu bloqueador de anúncios e do sítio específico",
 		"tag.45.name": "Potencialmente problemático"
 	},
 	{
@@ -208,11 +208,11 @@
 		"tag.49.name": "Bloqueio de publicidade específico no idioma em dinamarquês"
 	},
 	{
-		"tag.50.description": "Projetado para resistir a scripts de evasão de bloqueios em sites",
-		"tag.50.name": "Protecção contra scripts de evasão de bloqueios"
+		"tag.50.description": "Projetado para resistir a scripts de evasão de bloqueios em sítios",
+		"tag.50.name": "Proteção contra scripts de evasão de bloqueios"
 	},
 	{
-		"tag.51.description": "Projectado para bloquear alertas de sites sobre políticas de cookies",
+		"tag.51.description": "Projectado para bloquear alertas de sítios sobre políticas de cookies",
 		"tag.51.name": "Bloqueio de alertas de cookies"
 	},
 	{
