--- a/locales/pt_BR/filters.json
+++ b/locales/pt_BR/filters.json
@@ -64,7 +64,7 @@
 		"filter.16.description": "Lista FR + Filtro Francês do AdGuard. Filtros que permite a remoção de anúncios em sites com conteúdo em francês."
 	},
 	{
-		"filter.17.name": "Filtro de rastreamento de URL do AdGuard",
+		"filter.17.name": "Filtro contra rastreamento de URL do AdGuard",
 		"filter.17.description": "Filtro que aumenta a privacidade removendo parâmetros de rastreamento de URLs."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filtro que remove anúncios, rastreadores e vários scripts de sites com conteúdo coreano. Baseado em Corset, filtro Adblock coreano, Youslist. Combinado e aumentado com regras específicas do AdGuard para filtragem aprimorada. Espera-se que esse filtro seja usado junto com o filtro base do AdGuard."
+		"filter.227.description": "Filtro que remove anúncios e vários scripts de sites com conteúdo coreano. Baseado em Corset, filtro Adblock coreano, Youslist. Combinado e aumentado com regras específicas do AdGuard para filtragem aprimorada. Espera-se que esse filtro seja usado junto com o filtro base do AdGuard."
 	},
 	{
 		"filter.228.name": "xinggsf",
