--- a/locales/ru/tags.json
+++ b/locales/ru/tags.json
@@ -17,10 +17,10 @@
 	},
 	{
 		"tag.62.description": "Имеет отсылки к польскому фильтру раздражителей",
-		"tag.62.name": "Польский фильтр раздражителей"
+		"tag.62.name": "Отсылка к польскому фильтру раздражителей"
 	},
 	{
-		"tag.3.description": "Создан для блокировки элементов социальных сетей (виджеты, кнопки \"Мне нравится\" и тому подобное).",
+		"tag.3.description": "Создан для блокировки элементов социальных сетей (виджеты, кнопки «Мне нравится» и тому подобное)",
 		"tag.3.name": "Блокировка виджетов социальных сетей"
 	},
 	{
