--- a/locales/sl/filters.json
+++ b/locales/sl/filters.json
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "Seznam-KR",
-		"filter.227.description": "Filter, ki odstranjuje oglase, sledilce in različne skripte s spletnih strani s korejsko vsebino. Na osnovi steznika Youslist, korejskega filtra za zaviranje oglasov. Spojen in dopolnjen s posebnimi pravili AdGuarda za izboljšano filtriranje. Pričakovano se ta filter uporabljala skupaj z Osnovnim filtrom AdGuarda."
+		"filter.227.description": "Filter, ki odstrani oglase in različne skripte s spletnih strani s korejsko vsebino. Na podlagi Corset, korejskega filtra Adblock, vašega seznama. Kombinirano in razširjeno s posebnimi pravili AdGuard za izboljšano filtriranje. Ta filter naj bi se uporabljal skupaj s filtrom AdGuard Base."
 	},
 	{
 		"filter.228.name": "xinggsf",
