--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -1,7 +1,7 @@
 [
 	{
 		"filter.1.name": "AdGuard Rusça filtresi",
-		"filter.1.description": "AdGuard Rusça filtresi. Özellikle Rusça sitelerde reklamların engellenmesini sağlayan filtresi."
+		"filter.1.description": "AdGuard Rusça filtresi. Özellikle Rusça sitelerde reklamları engelleyen filtre."
 	},
 	{
 		"filter.2.name": "AdGuard Temel filtresi",
@@ -13,7 +13,7 @@
 	},
 	{
 		"filter.4.name": "AdGuard Sosyal Medya filtresi",
-		"filter.4.description": "Sosyal ağ araçları (\"Beğen\" butonları vb) için bir filtre."
+		"filter.4.description": "Sosyal ağ araçları (\"Beğen\" düğmeleri, vb.) için bir filtre."
 	},
 	{
 		"filter.5.name": "AdGuard Deneysel filtresi",
@@ -36,7 +36,7 @@
 		"filter.9.description": "Özellikle İspanyolca ve Portekizce sitelerde reklamları engelleyen filtre."
 	},
 	{
-		"filter.10.name": "Engellemeyi kaldıran arama ağı ve öz-tanıtım reklamlarını filtrele",
+		"filter.10.name": "Arama motoru reklamlarına ve öz tanıtımına izin veren filtre",
 		"filter.10.description": "Arama sonucu (Duckduckgo, Google, Bing, Yahoo) ve sitelerin kendi tanıtım reklamlarının engelini kaldıran filtre. Sitelerin kendi tanıtım reklamının tanımı: Bir sitedeki reklam, bu sitenin veya onunla yakından alakalı diğer siteyi/sosyal medya bağlantısını vb. tanıtıyorsa, bu reklam kendi tanıtım reklamı olarak kabul edilir."
 	},
 	{
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Korece içeriğe sahip web sitelerinden reklamları, izleyicileri ve çeşitli betikleri kaldıran filtre. Kore Adblock filtresi, Youslist, Corset filtresi temel alınmıştır. Gelişmiş filtreleme için AdGuard'a özgü kurallarla birleştirildi ve genişletildi. Bu filtrenin AdGuard Temel filtresiyle birlikte kullanılması beklenir."
+		"filter.227.description": "Korece içeriğe sahip web sitelerinden reklamları ve çeşitli betikleri kaldıran filtre. Kore Adblock filtresi, Youslist, Corset filtresi temel alınmıştır. Gelişmiş filtreleme için AdGuard'a özgü kurallarla birleştirildi ve genişletildi. Bu filtrenin AdGuard Temel filtresiyle birlikte kullanılması beklenir."
 	},
 	{
 		"filter.228.name": "xinggsf",
