--- a/locales/zh_TW/filters.json
+++ b/locales/zh_TW/filters.json
@@ -21,7 +21,7 @@
 	},
 	{
 		"filter.6.name": "AdGuard 德文過濾器",
-		"filter.6.description": "EasyList Germany + AdGuard 德文過濾器。特別地移除於德語網站上的廣告之過濾清單。"
+		"filter.6.description": "EasyList Germany + AdGuard 德文過濾器。專門地移除於德語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.7.name": "AdGuard 日文過濾器",
@@ -29,11 +29,11 @@
 	},
 	{
 		"filter.8.name": "AdGuard 荷蘭文過濾器",
-		"filter.8.description": "EasyList Dutch + AdGuard 荷蘭文過濾器。特別地移除於荷蘭語網站上的廣告之過濾清單。"
+		"filter.8.description": "EasyList Dutch + AdGuard 荷蘭文過濾器。專門地移除於荷蘭語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.9.name": "AdGuard 西班牙文/葡萄牙文過濾器",
-		"filter.9.description": "特別地移除於西班牙語和葡萄牙語網站上的廣告之過濾清單。"
+		"filter.9.description": "專門地移除於西班牙語和葡萄牙語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.10.name": "解除封鎖搜尋廣告和自我推銷之過濾器",
@@ -49,7 +49,7 @@
 	},
 	{
 		"filter.13.name": "AdGuard 土耳其文過濾器",
-		"filter.13.description": "特別地移除於土耳其語網站上的廣告之過濾清單。"
+		"filter.13.description": "專門地移除於土耳其語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.14.name": "AdGuard 惱人的事物過濾器",
@@ -61,7 +61,7 @@
 	},
 	{
 		"filter.16.name": "AdGuard 法文過濾器",
-		"filter.16.description": "Liste FR + AdGuard 法文過濾器。特別地移除於法語網站上的廣告之過濾清單。"
+		"filter.16.description": "Liste FR + AdGuard 法文過濾器。專門地移除於法語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.17.name": "AdGuard 網址追蹤過濾器",
@@ -69,7 +69,7 @@
 	},
 	{
 		"filter.224.name": "AdGuard 中文過濾器",
-		"filter.224.description": "EasyList China + AdGuard 中文過濾器。特別地移除於漢語網站上的廣告之過濾清單。"
+		"filter.224.description": "EasyList China + AdGuard 中文過濾器。專門地移除於漢語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.101.name": "EasyList",
@@ -165,7 +165,7 @@
 	},
 	{
 		"filter.203.name": "Hungarian filter",
-		"filter.203.description": "Hufilter。特別地移除於匈牙利語網站上的廣告之過濾清單。"
+		"filter.203.description": "Hufilter。專門地移除於匈牙利語網站上的廣告之過濾清單。"
 	},
 	{
 		"filter.204.name": "Peter Lowe's Blocklist",
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "從具有韓文內容的網站上移除廣告、追蹤器和各種腳本的過濾器。基於 Corset、Korean Adblock filter 和 Youslist。為了增進的過濾，被與特定 AdGuard 的規則結合和擴增。此過濾器受預期與 AdGuard 基本過濾器一起被使用。"
+		"filter.227.description": "從具有韓文內容的網站上移除廣告和各種腳本的過濾器。基於 Corset、Korean Adblock filter 和 Youslist。為了增進的過濾，被與特定 AdGuard 的規則結合和擴增。此過濾器受預期與 AdGuard 基本過濾器一起被使用。"
 	},
 	{
 		"filter.228.name": "乘風廣告過濾器",
@@ -305,7 +305,7 @@
 	},
 	{
 		"filter.242.name": "NoCoin Filter List",
-		"filter.242.description": "此過濾器禁用基於瀏覽器的挖礦服務，如 coin-hive。"
+		"filter.242.description": "此過濾器禁用基於瀏覽器的挖礦程式，諸如 coin-hive。"
 	},
 	{
 		"filter.243.name": "Frellwit's Swedish Filter",
