--- a/locales/es_ES/filters.json
+++ b/locales/es_ES/filters.json
@@ -9,7 +9,7 @@
 	},
 	{
 		"filter.3.name": "Filtro de protección contra rastreo",
-		"filter.3.description": "La lista más completa de varios contadores en línea y herramientas de análisis web. Utilice este filtro si no desea que se realice el rastreo de sus acciones en Internet."
+		"filter.3.description": "La lista más completa de varios contadores en línea y herramientas de análisis web. Utiliza este filtro si no deseas que se realice el rastreo de tus acciones en Internet."
 	},
 	{
 		"filter.4.name": "Filtro de redes sociales",
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filtro que elimina anuncios, rastreadores y varios scripts de los sitios web con contenido coreano. Basado en Corset, Korean Adblock filter, YousList. Combinado y aumentado con reglas específicas de AdGuard para mejorar el filtrado. Se espera que este filtro se utilice junto con el Filtro base."
+		"filter.227.description": "Filtro que elimina anuncios y varios scripts de los sitios web con contenido coreano. Basado en Corset, Korean Adblock filter, YousList. Combinado y aumentado con reglas específicas de AdGuard para mejorar el filtrado. Se espera que este filtro se utilice junto con el Filtro base."
 	},
 	{
 		"filter.228.name": "xinggsf",
