--- a/locales/es_ES/tags.json
+++ b/locales/es_ES/tags.json
@@ -36,7 +36,7 @@
 		"tag.7.name": "Bloqueo de anuncios en inglés"
 	},
 	{
-		"tag.2.description": "Diseñado para proteger su privacidad en línea mediante el bloqueo de rastreadores y elementos analíticos",
+		"tag.2.description": "Diseñado para proteger tu privacidad en línea mediante el bloqueo de rastreadores y elementos analíticos",
 		"tag.2.name": "Protección de privacidad"
 	},
 	{
@@ -48,7 +48,7 @@
 		"tag.1.name": "Bloqueo de anuncios"
 	},
 	{
-		"tag.4.description": "Diseñado para protegerle de sitios web maliciosos y peligrosos",
+		"tag.4.description": "Diseñado para protegerte de sitios web maliciosos y peligrosos",
 		"tag.4.name": "Protección contra malware y fraude"
 	},
 	{
@@ -56,7 +56,7 @@
 		"tag.10.name": "Recomendación de AdGuard"
 	},
 	{
-		"tag.5.description": "Diseñado para bloquear elementos que no son anuncios pero que le distraen del contenido (ofertas de suscripción, avisos de promoción, etc.)",
+		"tag.5.description": "Diseñado para bloquear elementos que no son anuncios pero que te distraen del contenido (ofertas de suscripción, avisos de promoción, etc.)",
 		"tag.5.name": "Protección contra elementos molestos"
 	},
 	{
@@ -188,7 +188,7 @@
 		"tag.44.name": "Bloqueo de anuncios en griego"
 	},
 	{
-		"tag.45.description": "Puede causar problemas dependiendo de su bloqueador de anuncios y el sitio web específico",
+		"tag.45.description": "Puede causar problemas dependiendo de tu bloqueador de anuncios y el sitio web específico",
 		"tag.45.name": "Potencialmente problemático"
 	},
 	{
