--- a/locales/hr/filters.json
+++ b/locales/hr/filters.json
@@ -64,6 +64,10 @@
 		"filter.16.description": "Liste FR + AdGuard Francuski filtar. Popis filtara posebno dizajniranih za blokiranje oglasa na francuskom jeziku."
 	},
 	{
+		"filter.17.name": "AdGuard URL filtar za praćenje",
+		"filter.17.description": "Filtar koji poboljšava privatnost tako da uklanja parametre praćenja iz URL-ova."
+	},
+	{
 		"filter.224.name": "AdGuard Kineski filtar",
 		"filter.224.description": "EasyList China + AdGuard Kineski filtar. Popis filtara posebno dizajniranih za blokiranje oglasa na kineskom jeziku."
 	},
