--- a/locales/id/filters.json
+++ b/locales/id/filters.json
@@ -64,6 +64,10 @@
 		"filter.16.description": "Penyaring AdGuard Prancis + Liste FR. Daftar penyaring yang secara khusus menghapus iklan di situs web dalam bahasa Prancis."
 	},
 	{
+		"filter.17.name": "Filter Pelacakan URL AdGuard",
+		"filter.17.description": "Filter yang meningkatkan privasi dengan menghapus parameter pelacakan dari URL."
+	},
+	{
 		"filter.224.name": "Penyaring AdGuard China",
 		"filter.224.description": "EasyList China + Penyaring AdGuard China. Daftar penyaring yang aman khusus membuang iklan pada situs dalam Bahasa China."
 	},
@@ -161,7 +165,7 @@
 	},
 	{
 		"filter.203.name": "Hungarian filter",
-		"filter.203.description": "Daftar filter yang secara khusus menghapus iklan di situs web dalam bahasa Hongaria."
+		"filter.203.description": "Hufilter. Daftar filter yang secara khusus menghapus iklan di situs web dalam bahasa Hongaria."
 	},
 	{
 		"filter.204.name": "Peter Lowe's Blocklist",
