--- a/locales/zh_TW/tags.json
+++ b/locales/zh_TW/tags.json
@@ -1,18 +1,18 @@
 [
 	{
-		"tag.64.description": "特別地旨在封鎖於泰語網頁上之廣告",
+		"tag.64.description": "專門地旨在封鎖於泰語網頁上之廣告",
 		"tag.64.name": "特定泰語的廣告封鎖"
 	},
 	{
-		"tag.63.description": "特別地旨在封鎖於法羅語網頁上之廣告",
+		"tag.63.description": "專門地旨在封鎖於法羅語網頁上之廣告",
 		"tag.63.name": "特定法羅語的廣告封鎖"
 	},
 	{
-		"tag.30.description": "特別地旨在封鎖於保加利亞語網頁上之廣告",
+		"tag.30.description": "專門地旨在封鎖於保加利亞語網頁上之廣告",
 		"tag.30.name": "特定保加利亞語的廣告封鎖"
 	},
 	{
-		"tag.29.description": "特別地旨在封鎖於印尼語網頁上之廣告",
+		"tag.29.description": "專門地旨在封鎖於印尼語網頁上之廣告",
 		"tag.29.name": "特定印尼語的廣告封鎖"
 	},
 	{
@@ -32,7 +32,7 @@
 		"tag.6.name": "Cookie 通知封鎖"
 	},
 	{
-		"tag.7.description": "特別地旨在封鎖於英語網頁上之廣告",
+		"tag.7.description": "專門地旨在封鎖於英語網頁上之廣告",
 		"tag.7.name": "特定英語的廣告封鎖"
 	},
 	{
@@ -40,7 +40,7 @@
 		"tag.2.name": "隱私保護"
 	},
 	{
-		"tag.8.description": "特別地旨在封鎖於俄語網頁上之廣告",
+		"tag.8.description": "專門地旨在封鎖於俄語網頁上之廣告",
 		"tag.8.name": "特定俄語的廣告封鎖"
 	},
 	{
@@ -64,7 +64,7 @@
 		"tag.11.name": "AdGuard 基本過濾器參考"
 	},
 	{
-		"tag.12.description": "特別地旨在封鎖於德語網頁上之廣告",
+		"tag.12.description": "專門地旨在封鎖於德語網頁上之廣告",
 		"tag.12.name": "特定德語的廣告封鎖"
 	},
 	{
@@ -72,11 +72,11 @@
 		"tag.13.name": "EasyList Germany 過濾器參考"
 	},
 	{
-		"tag.14.description": "特別地旨在封鎖於日語網頁上之廣告",
+		"tag.14.description": "專門地旨在封鎖於日語網頁上之廣告",
 		"tag.14.name": "特定日語的廣告封鎖"
 	},
 	{
-		"tag.15.description": "特別地旨在封鎖於荷蘭語網頁上之廣告",
+		"tag.15.description": "專門地旨在封鎖於荷蘭語網頁上之廣告",
 		"tag.15.name": "特定荷蘭語的廣告封鎖"
 	},
 	{
@@ -84,35 +84,35 @@
 		"tag.16.name": "EasyList Dutch 過濾器參考"
 	},
 	{
-		"tag.17.description": "特別地旨在封鎖於西班牙語網頁上之廣告",
+		"tag.17.description": "專門地旨在封鎖於西班牙語網頁上之廣告",
 		"tag.17.name": "特定西班牙語的廣告封鎖"
 	},
 	{
-		"tag.18.description": "特別地旨在封鎖於葡萄牙語網頁上之廣告",
+		"tag.18.description": "專門地旨在封鎖於葡萄牙語網頁上之廣告",
 		"tag.18.name": "特定葡萄牙語的廣告封鎖"
 	},
 	{
-		"tag.19.description": "特別地旨在封鎖於行動裝置上之廣告和追蹤器",
+		"tag.19.description": "專門地旨在封鎖於行動裝置上之廣告和追蹤器",
 		"tag.19.name": "用於行動裝置"
 	},
 	{
-		"tag.20.description": "包含一套規則以修正相容性問題",
+		"tag.20.description": "包含一套規則以修復相容性問題",
 		"tag.20.name": "相容性"
 	},
 	{
-		"tag.21.description": "特別地旨在工作於運用 iOS 的裝置上",
+		"tag.21.description": "專門地旨在工作於運用 iOS 的裝置上",
 		"tag.21.name": "特定 iOS 的"
 	},
 	{
-		"tag.22.description": "特別地旨在與 Safari 瀏覽器內容阻擋器一起工作",
+		"tag.22.description": "專門地旨在與 Safari 瀏覽器內容阻擋器一起工作",
 		"tag.22.name": "特定 Safari 的"
 	},
 	{
-		"tag.23.description": "包含一套規則以修正相容性問題",
+		"tag.23.description": "包含一套規則以修復相容性問題",
 		"tag.23.name": "相容性"
 	},
 	{
-		"tag.24.description": "特別地旨在封鎖於土耳其語網頁上之廣告",
+		"tag.24.description": "專門地旨在封鎖於土耳其語網頁上之廣告",
 		"tag.24.name": "特定土耳其語的廣告封鎖"
 	},
 	{
@@ -124,7 +124,7 @@
 		"tag.26.name": "行動廣告過濾器參考"
 	},
 	{
-		"tag.27.description": "特別地旨在封鎖於法語網頁上之廣告",
+		"tag.27.description": "專門地旨在封鎖於法語網頁上之廣告",
 		"tag.27.name": "特定法語的廣告封鎖"
 	},
 	{
@@ -132,59 +132,59 @@
 		"tag.28.name": "Liste FR 過濾器參考"
 	},
 	{
-		"tag.31.description": "特別地旨在封鎖於漢語網頁上之廣告",
+		"tag.31.description": "專門地旨在封鎖於漢語網頁上之廣告",
 		"tag.31.name": "特定漢語的廣告封鎖"
 	},
 	{
-		"tag.32.description": "特別地旨在封鎖於捷克語網頁上之廣告",
+		"tag.32.description": "專門地旨在封鎖於捷克語網頁上之廣告",
 		"tag.32.name": "特定捷克語的廣告封鎖"
 	},
 	{
-		"tag.33.description": "特別地旨在封鎖於斯洛伐克語網頁上之廣告",
+		"tag.33.description": "專門地旨在封鎖於斯洛伐克語網頁上之廣告",
 		"tag.33.name": "特定斯洛伐克語的廣告封鎖"
 	},
 	{
-		"tag.34.description": "特別地旨在封鎖於希伯來語網頁上之廣告",
+		"tag.34.description": "專門地旨在封鎖於希伯來語網頁上之廣告",
 		"tag.34.name": "特定希伯來語的廣告封鎖"
 	},
 	{
-		"tag.35.description": "特別地旨在封鎖於義大利語網頁上之廣告",
+		"tag.35.description": "專門地旨在封鎖於義大利語網頁上之廣告",
 		"tag.35.name": "特定義大利語的廣告封鎖"
 	},
 	{
-		"tag.36.description": "特別地旨在封鎖於拉脫維亞語網頁上之廣告",
+		"tag.36.description": "專門地旨在封鎖於拉脫維亞語網頁上之廣告",
 		"tag.36.name": "特定拉脫維亞語的廣告封鎖"
 	},
 	{
-		"tag.37.description": "特別地旨在封鎖於立陶宛語網頁上之廣告",
+		"tag.37.description": "專門地旨在封鎖於立陶宛語網頁上之廣告",
 		"tag.37.name": "特定立陶宛語的廣告封鎖"
 	},
 	{
-		"tag.38.description": "特別地旨在封鎖於阿拉伯語網頁上之廣告",
+		"tag.38.description": "專門地旨在封鎖於阿拉伯語網頁上之廣告",
 		"tag.38.name": "特定阿拉伯語的廣告封鎖"
 	},
 	{
-		"tag.39.description": "特別地旨在封鎖於羅馬尼亞語網頁上之廣告",
+		"tag.39.description": "專門地旨在封鎖於羅馬尼亞語網頁上之廣告",
 		"tag.39.name": "特定羅馬尼亞語的廣告封鎖"
 	},
 	{
-		"tag.40.description": "特別地旨在封鎖於芬蘭語網頁上之廣告",
+		"tag.40.description": "專門地旨在封鎖於芬蘭語網頁上之廣告",
 		"tag.40.name": "特定芬蘭語的廣告封鎖"
 	},
 	{
-		"tag.41.description": "特別地旨在封鎖於波蘭語網頁上之廣告",
+		"tag.41.description": "專門地旨在封鎖於波蘭語網頁上之廣告",
 		"tag.41.name": "特定波蘭語的廣告封鎖"
 	},
 	{
-		"tag.42.description": "特別地旨在封鎖於冰島語網頁上之廣告",
+		"tag.42.description": "專門地旨在封鎖於冰島語網頁上之廣告",
 		"tag.42.name": "特定冰島語的廣告封鎖"
 	},
 	{
-		"tag.43.description": "特別地旨在封鎖於挪威語網頁上之廣告",
+		"tag.43.description": "專門地旨在封鎖於挪威語網頁上之廣告",
 		"tag.43.name": "特定挪威語的廣告封鎖"
 	},
 	{
-		"tag.44.description": "特別地旨在封鎖於希臘語網頁上之廣告",
+		"tag.44.description": "專門地旨在封鎖於希臘語網頁上之廣告",
 		"tag.44.name": "特定希臘語的廣告封鎖"
 	},
 	{
@@ -196,15 +196,15 @@
 		"tag.46.name": "過時的"
 	},
 	{
-		"tag.47.description": "特別地旨在封鎖於捷克語網頁上之廣告",
+		"tag.47.description": "專門地旨在封鎖於捷克語網頁上之廣告",
 		"tag.47.name": "特定捷克語的廣告封鎖"
 	},
 	{
-		"tag.48.description": "特別地旨在封鎖於匈牙利語網頁上之廣告",
+		"tag.48.description": "專門地旨在封鎖於匈牙利語網頁上之廣告",
 		"tag.48.name": "特定匈牙利語的廣告封鎖"
 	},
 	{
-		"tag.49.description": "特別地旨在封鎖於丹麥語網頁上之廣告",
+		"tag.49.description": "專門地旨在封鎖於丹麥語網頁上之廣告",
 		"tag.49.name": "特定丹麥語的廣告封鎖"
 	},
 	{
@@ -216,23 +216,23 @@
 		"tag.51.name": "Cookie 警報封鎖"
 	},
 	{
-		"tag.52.description": "特別地旨在封鎖於越南語網頁上之廣告",
+		"tag.52.description": "專門地旨在封鎖於越南語網頁上之廣告",
 		"tag.52.name": "特定越南語的廣告封鎖"
 	},
 	{
-		"tag.53.description": "特別地旨在封鎖於愛沙尼亞語網頁上之廣告",
+		"tag.53.description": "專門地旨在封鎖於愛沙尼亞語網頁上之廣告",
 		"tag.53.name": "特定愛沙尼亞語的廣告封鎖"
 	},
 	{
-		"tag.54.description": "特別地旨在封鎖於波斯語網頁上之廣告",
+		"tag.54.description": "專門地旨在封鎖於波斯語網頁上之廣告",
 		"tag.54.name": "特定波斯語的廣告封鎖"
 	},
 	{
-		"tag.55.description": "特別地旨在封鎖於瑞典語網頁上之廣告",
+		"tag.55.description": "專門地旨在封鎖於瑞典語網頁上之廣告",
 		"tag.55.name": "特定瑞典語的廣告封鎖"
 	},
 	{
-		"tag.56.description": "特別地旨在封鎖於韓語網頁上之廣告",
+		"tag.56.description": "專門地旨在封鎖於韓語網頁上之廣告",
 		"tag.56.name": "特定韓語的廣告封鎖"
 	},
 	{
