add 250 and 251 filters name and description for translation

--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "This list covers websites for Norway, Denmark, Iceland, Danish territories, and the Sami indigenous population."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "This list is made in the style of AdGuard's and Fanboy's annoyances lists. It combines many of Dandelion Sprout's proudest and most frequently maintained international lists, as a curated compilation for simplicity's sake."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Automatically removes unnecessary '$' and '&' values from URLs, making them easier to copy from the URL bar and pasting elsewhere as links."
 	}
 ]
